fix: format code and align buttons

--- a/Gui_front_end/src/css/login/login.css
+++ b/Gui_front_end/src/css/login/login.css
@@ -1,218 +1,3 @@
-/* .container-login-general{
-    overflow: hidden;
-    background-color: rgb(255, 255, 255);
-    height: 100vh;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-
-}
-
-.container1-login-general{
-    height: 100vh;
-}
-
-
-.container1-login-general img {
-    height: 100vh;
-    width: 100vh;
-    object-fit: cover;
-    opacity: 0.8; 
-    filter: brightness(0.9) contrast(1.1) sepia(0.2) saturate(1.2);
-}
-
-
-.container2-login-general{
-   display: grid;
-   grid-template-columns: repeat(1,1fr);
-}
-
-
-
-.wave-group {
-    position: relative;
-    margin-top: 20px;
-}
-
-.wave-group .input-login-general {
-    font-size: 16px;
-    padding: 10px 10px 10px 5px;
-    display: block;
-    max-width: 60vh;
-    border: none;
-    border-bottom: 1px solid #515151;
-    background: transparent;
-    width: 100em;
-}
-
-.wave-group .input-login-general:focus {
-    outline: none;
-}
-
-.wave-group .label-login-general {
-    color: #1d318b;
-    font-size: 18px;
-    font-weight: normal;
-    position: absolute;
-    pointer-events: none;
-    left: 5px;
-    top: 10px;
-    display: flex;
-    padding-bottom: 1em;
-}
-
-.wave-group .label-char {
-    transition: 0.2s ease all;
-    transition-delay: calc(var(--index) * .05s);
-}
-
-.wave-group .input-login-general:focus ~ .label-login-general .label-char,
-.wave-group .input-login-general:valid ~ .label-login-general .label-char {
-    transform: translateY(-20px);
-    font-size: 14px
-}
-
-.wave-group .bar {
-    position: relative;
-    display: block;
-    width: 90%; 
-    max-width: 200px;
-}
-
-.wave-group .bar:before,
-.wave-group .bar:after {
-    content: '';
-    height: 2px;
-    width: 0;
-    bottom: 1px;
-    position: absolute;
-    transition: 0.2s ease all;
-}
-
-.wave-group .bar:before {
-    left: 50%;
-}
-
-.wave-group .bar:after {
-    right: 50%;
-}
-
-.wave-group .input-login-general:focus ~ .bar:before,
-.wave-group .input-login-general:focus ~ .bar:after {
-    width: 50%;
-}
-
-  .animated-button {
-    position: relative;
-    display: flex;
-    align-items: center;
-    gap: 2px; 
-    padding: 8px 24px;
-    border: 2px solid;
-    border-color: transparent;
-    font-size: 12px;
-    border-radius: 50px;
-    font-weight: 500;
-    box-shadow: 0 0 0 2px #ffffff;
-    cursor: pointer;
-    overflow: hidden;
-    transition: all 0.6s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .animated-button:hover {
-    background-color: #c5e5e4;
-    color: #212121;
-  }
-  
-  .animated-button svg {
-    position: absolute;
-    width: 16px;
-    z-index: 9;
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .animated-button .arr-1 {
-    right: 12px; 
-  }
-  
-  .animated-button .arr-2 {
-    left: -20%;
-  }
-  
-  .animated-button .circle {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 10px;
-    height: 10px;
-    background-color: #c5e5e4;
-    border-radius: 50%;
-    opacity: 0;
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .animated-button .text {
-    position: relative;
-    z-index: 1;
-    transform: translateX(-8px);
-    transition: all 0.8s cubic-bezier(0.23, 1, 0.32, 1);
-  }
-  
-  .animated-button:hover {
-    box-shadow: 0 0 0 12px transparent;
-  }
-  
-  .animated-button:hover .arr-1 {
-    right: -20%;
-  }
-  
-  .animated-button:hover .arr-2 {
-    left: 12px;
-  }
-  
-  .animated-button:hover .text {
-    transform: translateX(8px);
-  }
-  
-  .animated-button:active {
-    scale: 0.95;
-    box-shadow: 0 0 0 4px rgb(192, 192, 191);
-  }
-  
-  .animated-button:hover .circle {
-    width: 180px;
-    height: 180px;
-    opacity: 1;
-  }
-  
-  .img-logo-inicio{
-    height: 15vh;
-    display: grid;
-    place-items: center;  
-  }
-  .container-inputs-general{
-    height: 45vh;
-    display: grid;
-    place-items: center;
-  }
-  .container-input-start {
-    height: 30vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between; 
-    align-items: flex-start; 
-    justify-content: flex-start; 
-    padding-top: 8px; 
-    width: 100%; 
-    place-content: center;
-    column-gap: 40vh;
-  }
-  .container-derechos-general{
-    height: 10vh;
-    display: grid;
-    place-items: center;
-  } */
-
 .container-login-general {
   overflow: hidden;
   background-color: rgb(255, 255, 255);
@@ -395,7 +180,8 @@
   width: 180px;
   height: 180px;
   opacity: 1;
-}.animated-button {
+}
+.animated-button {
   position: relative;
   display: flex;
   align-items: center;
@@ -493,21 +279,45 @@
 
 .container-input-start {
   height: 30vh;
+  width: 60vh;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: center;
   align-items: flex-start; /* Alinea los elementos al inicio en la horizontal */
-  justify-content: flex-start; /* Alinea los elementos al inicio en la vertical */
   padding-top: 8px; /* Un pequeño padding si quieres un poco de separación del borde */
-  width: 100%; /* Asegura que los elementos ocupen todo el ancho */
   place-content: center;
-  column-gap: 40vh;
 }
 
 .container-derechos-general {
   height: 10vh;
   display: grid;
   place-items: center;
+}
+
+.container2-login-general form {
+  align-items: center;
+}
+
+.login-img {
+  margin-left: 6rem;
+}
+
+.forgot-pass {
+  text-decoration: none;
+  width: 50%;
+  font-size: 1.2rem;
+  padding-top: 0.8rem;
+}
+
+.animated-button {
+  width: 50%;
+}
+
+.error-message {
+  color: red;
+  font-weight: bold;
+  font-size: 1.2em;
+  padding: 10px;
 }
 
 /* Media Queries para responsividad */
@@ -548,14 +358,13 @@
   .wave-group .input-login-general {
     max-width: 100vh; /* Permitir que el input use todo el espacio disponible */
   }
-      .container-inputs-general {
+  .container-inputs-general {
     max-width: 100%; /* Aumentar el ancho máximo para que se vea bien en pantallas pequeñas */
   }
 
   .wave-group .input-login-general {
     max-width: 40vh; /* Aumentar el ancho máximo para que ocupe más espacio en pantallas pequeñas */
   }
-  
 }
 
 @media (max-width: 480px) {
